# blacksmith-organization-system

./: .eslintrc.json  .gitignore  .gitmodules  Dockerfile  README.md  archive.js  eslint.config.mjs  extras.js  forge.js  invoke-cli.js  invoke-terminal.js  jsconfig.json  main.js  package-lock.json  package.json  project.js  pyproject.toml  sarcophag.js  sheme.js  subject.js  superproject.js  throwbox.js  workshop.js
apps/: includes.csv
config/: main.json.default  startup.bos  workshop.json.default
dev/: _index.js  builder.sh  env-init.sh
docs/: README.md  about-interfaces.md  devlog.md
examples/: .app_index.js
shell-procedures/: deploy-new-workshop.sh  new-superproject.sh  purge-workshop.sh
src/: _index.js  _load.js  _run.js  includer.js  main.js  runner.js
src/BOS-py-api/: __init__.py
src/controllers/: CommandsControll.js  ConfigControll.js  InterfacesControll.js  ModelsControll.js  ProjectsControll.js  SandboxControll.js  ScopeControll.js  ScrapbookControll.js
src/core/: basic-subject-model.js  bos.class.js  bos.command.js  bos.controller.js  bos.interface.js  bos.js  components.json  helperFunctions.js
src/factors/: interface-factory.js
src/methods/: .define.json
src/models/: README.md
src/operations/: .define.json
src/services/: .define.json
src/system/: _load.js  _run.js
src/toolsets/: .define.json
system/bridges/: README.md  main.js
system/carnival-toolbox/: main.js
system/core/: archive.js  config-controll.js  contain-controll.js  extending-mod.js  forge.js  listeners-controll.js  main.js  project.js  record-controll.js  (+7 more)
(+127 files in other folders)
